syntax = "proto3";

package service.pb;

import "resource-aggregate/pb/commands.proto";
option go_package = "github.com/plgd-dev/client-application/pb;pb";


message DeleteResourceRequest {
  resourceaggregate.pb.ResourceId resource_id = 1;
}
