syntax = "proto3";

package service.pb;

option go_package = "github.com/plgd-dev/client-application/pb;pb";

message DisownDeviceRequest {
  string device_id = 1;
}

message DisownDeviceResponse {
}