syntax = "proto3";

package service.pb;

option go_package = "github.com/plgd-dev/client-application/pb;pb";

message ResourceId {
  string device_id = 1;
  string href = 2;
}

message Content {
  string content_type = 1;
  bytes data  = 2;
}